# film_place

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  main.py  pyproject.toml
films_place/: manage.py
films_place/core/: models.py
films_place/core/templates/base/: base.html
films_place/films_place/: asgi.py  settings.py  urls.py  wsgi.py
films_place/locale/uk/LC_MESSAGES/: django.po
films_place/movie/: admin.py  forms.py  urls.py  views.py
films_place/movie/migrations/: 0001_initial.py  0002_initial.py  0003_alter_movie_poster.py
films_place/movie/models/: __init__.py  cart.py  genre.py  movies.py
films_place/movie/templates/: index.html
films_place/movie/templates/cart/: cart_details.html
films_place/movie/templates/movie/: movie_creation.html  movie_delete.html  movie_detail.html  movie_update.html
films_place/user/: forms.py  models.py  urls.py  views.py
films_place/user/migrations/: 0001_initial.py  0002_tempuser.py
films_place/user/templates/: user_creation.html  user_login.html
films_place/user/templates/user/: user_creation.html  user_login.html
