[tool.poetry]
name = "films-place"
version = "0.1.0"
description = "A Django web application for film management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "films_place"}]

[tool.poetry.dependencies]
python = "^3.8.1"
django = ">=4.2,<5.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
